<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.zeromirai.classassistant.authentication.fragment.LoginFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_edittext_background"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView_icon_userName"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_user" />

            <View
                android:layout_width="2dip"
                android:layout_height="23dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="#EEEFFF" />

            <EditText
                android:id="@+id/editText_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/hint_userName"
                android:textColorHint="#AAAAAA"
                android:inputType="textPersonName"
                android:textColor="#333333"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/shape_edittext_background"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewimageView_icon_password"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                android:src="@drawable/icon_password" />

            <View
                android:layout_width="2dip"
                android:layout_height="23dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="#EEEFFF" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/hint_password"
                android:textColorHint="#AAAAAA"
                android:inputType="textPassword"
                android:textColor="#333333"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/shape_button_login"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/linearLayout_btn_login2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="#fefefe"
                android:textSize="18dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:text="Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clickTimetable"
        android:layout_weight="1" />

    <Button
        android:text="Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clickFee"
        android:layout_weight="1" />


</LinearLayout>
